Replace QWidget->show() with QWindow()->show()

efe4aa0dcc23e57e68ecd809068f1a49d7705a07 replaces many calls to
QWidget->show() with QWindow()->show(). Since mixing these is not
supported (https://bugreports.qt.io/browse/QTBUG-120316), replace the
remaining QWidget->show() with QWindow()->show() as well.

Test-plan:
- Enable KTorrent's system tray icon
- Close the main KTorrent window
- Execute ktorrent from the command line
- Close the main KTorrent window
- Execute ktorrent from the command line

Previously:
- After a few repeats ktorrent window doesn't show

Now:
- ktorrent window always shows after executing ktorrent

BUG: 481151