ktorrent/main.cpp
@@ -20,6 +20,7 @@
 #include <QCommandLineParser>
 #include <QDir>
 #include <QFile>
+#include <QWindow>
 
 #include <KAboutData>
 #include <KConfigGroup>
@@ -246,7 +247,7 @@ int main(int argc, char **argv)
         QObject::connect(&dbusService, &KDBusService::activateRequested, handleCmdLine);
         QObject::connect(&dbusService, &KDBusService::activateRequested, &widget, [&widget] {
             if (!widget.isVisible()) {
-                widget.show();
+                widget.window()->windowHandle()->show();
             } else {
                 KWindowSystem::updateStartupId(widget.windowHandle());
                 KWindowSystem::activateWindow(widget.windowHandle());
